--- a/attendance.html
+++ b/attendance.html
@@ -110,7 +110,7 @@
             };
             
             // Google Apps Script Web App으로 데이터 전송
-            fetch('YOUR_GOOGLE_APPS_SCRIPT_WEB_APP_URL', {
+            fetch('https://script.google.com/macros/s/AKfycbydTaQ65eCCt1ndXGvr402DyZC3CNfFgODjvU7aa9Vf6UF4FuiVlMHrUWomuTkkIWmpXg/exec', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
