--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <p>3. <a href="https://docs.google.com/spreadsheets/d/1F8eRlHvNMnzPdUynWQByQ6mLBtEJGOmVuEWmsRmbhjA" target="_blank">구글 시트에서 실시간 확인</a></p>
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcode/1.5.3/qrcode.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/qrcode@1.5.3/build/qrcode.min.js"></script>
     <script>
         // 오늘 날짜 표시
         const today = new Date();
