--- a/attendance.html
+++ b/attendance.html
@@ -136,7 +136,7 @@
             
             // Google Apps Script Web App으로 데이터 전송
             // TODO: 실제 Apps Script URL로 교체 필요
-            fetch('https://script.google.com/macros/s/AKfycbyqD5XljHn5bH2l0IJxeMiyvW5OrFNwXG6_RD957IoibFrrnD2cj5aH_FXgAM9zu8ubpA/exec', {
+            fetch('YOUR_GOOGLE_APPS_SCRIPT_WEB_APP_URL', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
